Progress on how to change a story for a child

--- a/HP Labs Main Twine and JS Projects/jchingames_experiments/Angel bot.html
+++ b/HP Labs Main Twine and JS Projects/jchingames_experiments/Angel bot.html
@@ -11,13 +11,25 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="Angel bot" startnode="1" creator="Twine" creator-version="2.3.8" ifid="CEAAC642-79EC-4CC0-BC13-472773AB4BE4" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Greeting" tags="" position="189.5,69.5" size="100,100">Hi, I&#39;m Angel. I&#39;m happy to meet you!
+<tw-storydata name="Angel bot" startnode="1" creator="Twine" creator-version="2.3.8" ifid="CEAAC642-79EC-4CC0-BC13-472773AB4BE4" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Greeting" tags="" position="881,41" size="100,100">Hi, I&#39;m Angel. I&#39;m happy to meet you!
 
 &lt;img src= &quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/jchingames_experiments/moxie_placeholder_image.png&quot;&gt;
 
 [[I&#39;m happy to meet you too-&gt;happy]]
 
-[[I don&#39;t want to talk to you right now-&gt;decline]]</tw-passagedata><tw-passagedata pid="2" name="happy" tags="" position="114.5,219.5" size="100,100">Awesome!  How was your day?</tw-passagedata><tw-passagedata pid="3" name="decline" tags="" position="264.5,219.5" size="100,100">Aww... I understand, going back into sleep mode...</tw-passagedata></tw-storydata>
+[[I don&#39;t want to talk to you right now-&gt;decline]]</tw-passagedata><tw-passagedata pid="2" name="happy" tags="" position="649,149" size="100,100">Awesome!  How was your day?
+
+[[Positive Response-&gt;Good Response on Day]]
+
+[[Negative Response-&gt;Bad]]
+</tw-passagedata><tw-passagedata pid="3" name="decline" tags="" position="1057,150" size="100,100">Aww... I understand, going back into sleep mode...</tw-passagedata><tw-passagedata pid="4" name="Good Response on Day" tags="" position="558,349" size="100,100">&lt;!--Intricacies of the day and Language to focus the child on the positives or negatives. --&gt;
+
+Positive Focus for the day</tw-passagedata><tw-passagedata pid="5" name="Bad" tags="" position="761,347" size="100,100">&lt;!-- intricacies of positive focus even in the negatives and learning from the lessons, but first starting with empathy and then using NLP to alter the language the child uses --&gt;
+
+Empathize, and understand, reflect back onto the child
+
+Start refocusing the child on learnings and lessons for how to positively change them for the better.
+</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
