--- a/HP Labs Main Twine and JS Projects/eyeforcz/index.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/index.html
@@ -3,11 +3,14 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+	<title>Eco Sheep</title>
+	<style>
+		body {margin:0; padding:0; overflow:hidden;}
+	</style>
 </head>
 
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
-<p id="debugText">Key count will be displayed here</p>
 
 <script src="js/GraphicsCommon.js"></script>
 <script src="js/ImageLoading.js"></script>
