more art, WIP world generation, pathfinding

--- a/HP Labs Main Twine and JS Projects/eyeforcz/index.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/index.html
@@ -13,6 +13,7 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="js/GraphicsCommon.js"></script>
+<script src="js/pathfinding.js"></script>
 <script src="js/ImageLoading.js"></script>
 <script src="js/Warrior.js"></script>
 <script src="js/World.js"></script>
