--- a/HP Labs Main Twine and JS Projects/eyeforcz/index.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/index.html
@@ -12,12 +12,12 @@
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="js/GraphicsCommon.js"></script>
-<script src="js/pathfinding.js"></script>
-<script src="js/ImageLoading.js"></script>
-<script src="js/Warrior.js"></script>
-<script src="js/World.js"></script>
+<script src="js/sheepClass.js"></script>
 <script src="js/Input.js"></script>
+<script src="js/ImageLoading.js"></script>
+<script src="js/GraphicsCommon.js"></script>
+<script src="js/World.js"></script>
+<script src="js/pathfinding.js"></script>
 <script src="js/Main.js"></script>
 
 </body>
