a sheep is born

--- a/HP Labs Main Twine and JS Projects/eyeforcz/index.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/index.html
@@ -12,11 +12,12 @@
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="js/sheepClass.js"></script>
+<script src="js/animalClass.js"></script>
+<script src="js/gameMain.js"></script>
 <script src="js/Input.js"></script>
 <script src="js/ImageLoading.js"></script>
 <script src="js/GraphicsCommon.js"></script>
-<script src="js/World.js"></script>
+<script src="js/mapGrid.js"></script>
 <script src="js/pathfinding.js"></script>
 <script src="js/Main.js"></script>
 
