--- a/HP Labs Main Twine and JS Projects/eyeforcz/sheep.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/sheep.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+<a href="../index.html">abandon your flock</a> when you're done<br/>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="js/animalClass.js"></script>
