--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -374,6 +374,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 (link: &quot;Space Shot Sam, by Chris&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]
 (link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
+(link: &quot;sheep sim by EyeForcz&quot;)[(goto-url: &#39;eyeForcz/sheep.html&#39;)]
 
 &lt;h3&gt;modern office&lt;/h3&gt;
 (link: &quot;pick up the ticking box&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
@@ -400,7 +401,6 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;H Unity Ozymandias&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
 
 &lt;h3&gt;stubs/tests (not usable in current state)&lt;/h3&gt;
-(link: &quot;Underwater (Unity) by Chris D&quot;)[(goto-url: &#39;unity_loader.html?phrase=Resurface_from_water&amp;file=Underwater&#39;)]
 (link: &quot;brianjb JavaScript&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 (link: &quot;jchingames twine demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
