Linked to angel bot from main twine

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -383,6 +383,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;EyeForcz bathroom&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)]
 
 &lt;h3&gt;musical/toy/lab?&lt;/h3&gt;
+(link: &quot;jchingames angel bot (Twine)&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_bot&amp;file=jchingamesexperiments_angelbot~&#39;)]
 (link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
 (link: &quot;EyeForcz table 2 (Cars), song by Alan&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
@@ -403,7 +404,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 &lt;h3&gt;stubs/tests (not usable in current state)&lt;/h3&gt;
 (link: &quot;brianjb JavaScript&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
-(link: &quot;jchingames twine demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
+(link: &quot;jchingames html canvas demo&quot;)[(goto-url: &#39;jchingamesexperiments/first.html&#39;)]
 (link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="1170,306" size="100,100">You&#39;re laid out on the hardwood floor, waking up to fluorescent lights humming overhead.
 
 [[I get up, checking myself to make sure I&#39;m unharmed.-&gt;getUp]]
