--- a/HP Labs Main Twine and JS Projects/eyeforcz/sheep.html
+++ b/HP Labs Main Twine and JS Projects/eyeforcz/sheep.html
@@ -3,7 +3,7 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
-	<title>Eco Sheep</title>
+	<title>SheepSim</title>
 	<style>
 		body {margin:0; padding:0; overflow:hidden;}
 	</style>
@@ -14,10 +14,12 @@
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script src="js/animalClass.js"></script>
+<script src="js/sheepClass.js"></script>
 <script src="js/gameMain.js"></script>
 <script src="js/Input.js"></script>
-<script src="js/ImageLoading.js"></script>
 <script src="js/GraphicsCommon.js"></script>
+<script src="js/ImageLoading.js"></script>
+<script src="js/tiles.js"></script>
 <script src="js/mapGrid.js"></script>
 <script src="js/pathfinding.js"></script>
 <script src="js/Main.js"></script>
