Fixing capitalization error in my Twine link to sheep game

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -374,7 +374,7 @@ Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine s
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 (link: &quot;Space Shot Sam, by Chris&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]
 (link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
-(link: &quot;sheep sim by EyeForcz&quot;)[(goto-url: &#39;eyeForcz/sheep.html&#39;)]
+(link: &quot;sheep sim by EyeForcz&quot;)[(goto-url: &#39;eyeforcz/sheep.html&#39;)]
 
 &lt;h3&gt;modern office&lt;/h3&gt;
 (link: &quot;pick up the ticking box&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
