hint system added to bbs hacking game

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -155,9 +155,10 @@ Directory of A:
 
 1998-05-31  10:29 AM &ltDIR&gt; .
 1998-05-31  10:29 AM &ltDIR&gt; ..
-1998-01-29  01:52 PM 1,024 BBS.EXE
-1998-01-28  01:52 PM 1,024 DEFRAG.EXE
+1998-01-29  01:52 PM 8,192 BBS.EXE
+1998-01-28  01:52 PM 4,096 DEFRAG.EXE
 1998-01-01  01:52 PM 1,024 DIR.EXE
+1998-01-02  11:59 AM   512 HINT.EXE
             1 File(s)  4,096 bytes
             2 Dir(s) 230,944 bytes free
 </pre>
@@ -396,6 +397,12 @@ Disconnecting modem on COM1...
 █▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
 █ Format complete.                               █
 █▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
+</pre>
 
+<pre id='HINT'>
+█▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀█
+█ HINT SUBSYSTEM v.042 beta                      █
+█▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█
+</pre>
 </body>
 </html>
