Fix for itch blocking twine scroll (involved tiny edit to our html loaders and any html5 standalone games on the backlink, since the solution involved an iframe)

--- a/HP Labs Main Twine and JS Projects/brianjb/bjb-index.html
+++ b/HP Labs Main Twine and JS Projects/brianjb/bjb-index.html
@@ -10,7 +10,7 @@
         #gameCanvas { margin:0; padding:0; }
     </style>
 </head>
-<a href="../index.html">exit</a><br/>
+<a href="../index.html" target="_parent">exit</a><br/>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 
 <script type="text/javascript">
