--- a/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/spaceshotsam/sam-exe.html
+++ b/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/spaceshotsam/sam-exe.html
@@ -1,5 +1,5 @@
 <link href="https://fonts.googleapis.com/css?family=Rajdhani|Open+Sans+Condensed:300" rel="stylesheet">
-<div style="font-family:Rajdhani">When you're done: <a href="../../index.html">power off, open disk door, pull out floppy</a></div>
+<div style="font-family:Rajdhani">When you're done: <a href="../../index.html" target="_parent">power off, open disk door, pull out floppy</a></div>
 <script src="js/glfx.js"></script>
 <script src="js/input.js"></script>
 <script src="js/enemy.js"></script>
