--- a/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/tumult.html
+++ b/HP Labs Main Twine and JS Projects/chrisdeleon_mad_science/tumult.html
@@ -11,7 +11,7 @@ body {
 }
 	</style>
 	</head>
-When you are done, <a href="../index.html">unstick the lens from your eyelid</a> to return. Please dispose of remains safely to prevent risk of outbreak.
+When you are done, <a href="../index.html" target="_parent">unstick the lens from your eyelid</a> to return. Please dispose of remains safely to prevent risk of outbreak.
 <canvas id="canvas" width="800" height="600" style="display: block;background: #000;position: absolute; left: 0px; top: 35px; margin:0px auto 0px auto;"></canvas>
 <script>
 var audioLoop = new Audio("tumult3.mp3");
