--- a/HP Labs Main Twine and JS Projects/jchingamesexperiments/first.html
+++ b/HP Labs Main Twine and JS Projects/jchingamesexperiments/first.html
@@ -1,4 +1,4 @@
-when you are done you can <a href="../index.html">remove the cart</a><br/>
+when you are done you can <a href="../index.html" target="_parent">remove the cart</a><br/>
 <canvas id="gameCanvas" width="800" height="800"></canvas>
 <script>
 var canvas;
