--- a/HP Labs Main Twine and JS Projects/mdfewkes/Tp.html
+++ b/HP Labs Main Twine and JS Projects/mdfewkes/Tp.html
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body>
-	Set the EVI <a href="../index.html">down</a> and return to the musical emporium
+	Set the EVI <a href="../index.html" target="_parent">down</a> and return to the musical emporium
 	<canvas id="laCanvas" width="800" height="600" style="display: block;background: #000000;position: absolute; left: 0px; top: 35px; margin:0px auto 0px auto;"></canvas>
 </body>
 
