--- a/HP Labs Main Twine and JS Projects/twine_frame.html
+++ b/HP Labs Main Twine and JS Projects/twine_frame.html
@@ -4,7 +4,7 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 </head>
-<center><a href="index.html" id="phrase"></a><br/>
+<center><a href="index.html" target="_parent" id="phrase"></a><br/>
 <iframe id="frame" src="" width="1000" height="675"></iframe></center>
 <script>
 
