--- a/HP Labs Main Twine and JS Projects/unity_loader.html
+++ b/HP Labs Main Twine and JS Projects/unity_loader.html
@@ -57,7 +57,7 @@ window.onload = function() {
     </script>
   </head>
   <body>
-    <center><a href="index.html" id="phrase"></a></center>
+    <center><a href="index.html" target="_parent" id="phrase"></a></center>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
