winscreen for bbs puzzle (wip)

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -313,6 +313,26 @@ BULLETIN BOARD SYSTEM  SYSOP           NUMBER
 
 </pre>
 
+<pre id='WINSCREEN'>
+▄ ▄▄▄ ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄▄ ▄
+
+  Mission successful! The secret passcode is:
+
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+░░░░░░░░░░███████╗░░░░█████╗░██╗██████╗░░░░░░░░░░░
+░░░░░░░░░░██╔════╝░░░██╔══██╗╚═╝╚════██╗░░░░░░░░░░
+░░░░░░░░░░██████╗░░░░╚█████╔╝░░░░█████╔╝░░░░░░░░░░
+░░░░░░░░░░╚════██╗░░░██╔══██╗░░░░╚═══██╗░░░░░░░░░░
+░░░░░░░░░░██████╔╝██╗╚█████╔╝██╗██████╔╝░░░░░░░░░░
+░░░░░░░░░░╚═════╝░╚═╝░╚════╝░╚═╝╚═════╝░░░░░░░░░░░
+░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+
+    Repeat, the secret passcode is 5.8:3
+
+▄ ▄▄▄ ▄▄▄▄▄▄▄▄▄▄▄▄▄ game over ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ ▄▄▄ ▄
+
+</pre>
+
 <pre id='BTF'>
 Connecting to COM port 0...
 Modem detected: HT Robotix 84-EX
