--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -360,17 +360,20 @@ muteShow.addEventListener("click", toggleMuteVO);
 function updateMuteIndicator() {
 	muteShow.innerHTML = (speakerThing.sayWords ? "🔊" : "🔇")+" (M key)";
 }
-updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="green"></tw-tag>,<tw-tag name="futureTower" color="green"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag>,<tw-tag name="underWater" color="blue"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="990,375" size="100,100">&lt;h3&gt;Hidden Passages 2: R&amp;D prototype&lt;/h3&gt;
+updateMuteIndicator(); // calling immediately</script><tw-tag name="ReplacedByGame" color="red"></tw-tag>,<tw-tag name="VO" color="green"></tw-tag>,<tw-tag name="futureTower" color="green"></tw-tag>,<tw-tag name="oldOffice" color="purple"></tw-tag>,<tw-tag name="underWater" color="blue"></tw-tag>,<tw-tag name="wrongVO" color="yellow"></tw-tag><tw-passagedata pid="1" name="Here is where it starts" tags="wrongVO" position="990,375" size="100,100">&lt;center&gt;
+&lt;h3&gt;&lt;font color=&quot;orange&quot;&gt;Hidden Passages 2:&lt;br/&gt;R&amp;D Labs&lt;/font&gt;&lt;/h3&gt;
 
-Press &quot;m&quot; key (for &quot;mute&quot;) at any time in these main Twine scenes to toggle Voiceover on or off. This will be restored when returning from prototypes.
+[[Play-&gt;playerPath1-amnesia]]
 
-[[debug path]]: demos quick access
+[[Test Skip-&gt;officeStart]]
 
-[[player intro sequence-&gt;playerPath1-amnesia]]: first things player will see
+[[Credits and Scene Select-&gt;gameCredits]]
 
-[[main office-&gt;officeStart]]: skip intro, go to player hub
+press M to mute voiceover
 
-&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;main menu&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="wrongVO" position="986,556" size="100,100">&lt;h3&gt;1980s&lt;/h3&gt;
+&lt;img src=&quot;https://hometeamgamedev.com/hp2/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;main menu&#39;)&quot;&gt;
+
+&lt;/center&gt;</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="wrongVO" position="859.3333333333334,496" size="100,100">&lt;h3&gt;1980s&lt;/h3&gt;
 (link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 (link: &quot;Space Shot Sam, by Chris&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]
 (link: &quot;cathySL demo&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
@@ -654,7 +657,34 @@ Do you... wanna use it?
 
 (link: &quot;insert the Space Shot Sam floppy disk&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)]</tw-passagedata><tw-passagedata pid="44" name="oldOfficeR" tags="oldOffice" position="2708,784" size="100,100">Wow! This computer has a hard drive! Amazing!
 
-(link: &quot;try out this new computer&#39;s one pre-installed game&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]</tw-passagedata></tw-storydata>
+(link: &quot;try out this new computer&#39;s one pre-installed game&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]</tw-passagedata><tw-passagedata pid="45" name="gameCredits" tags="wrongVO" position="1135,472.6666666666667" size="100,100">Chris DeLeon: Project lead, core gameplay, main areas, (link: &quot;Space Shot Sam&quot;)[(goto-url: &#39;chrisdeleon_mad_science/spaceshotsam/sam-exe.html&#39;)], (link: &quot;Tumult future eye art&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)], (link: &quot;future tower password entry area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Take_the_elevator_back_down&amp;file=FutureView&#39;)], custom Unity webGL sceneloader and Twine linking
+
+Muhammed &quot;EyeForcz&quot; Durmusoglu: Models ((link: &quot;clock&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=1&#39;)], (link: &quot;train&quot;)[(goto-url: &#39;unity_loader.html?phrase=Quit_game&amp;file=ClockSpin&amp;param=0&#39;)], (link: &quot;crystal table&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTable&#39;)], (link: &quot;mountain snow globe cars&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)], (link: &quot;bathroom models and related sound effects&quot;)[(goto-url: &#39;unity_loader.html?phrase=Exit_bathroom&amp;file=Bathroom&#39;)], (link: &quot;oneil&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=0&#39;)] (link: &quot;tubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Scream&amp;file=Oneil&amp;param=1&#39;)]), (link: &quot;sheep sim&quot;)[(goto-url: &#39;eyeforcz/sheep.html&#39;)], post-its
+
+Klaim (A. Joël Lamotte): (link: &quot;Infinite cubes&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=Infinite_Cube_Swarm&#39;)]
+
+Christer &quot;McFunkypants&quot; Kaitila: (link: &quot;BBS hacker&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
+
+Michael &quot;Misha&quot; Fewkes: (link: &quot;Drum machine&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)] and (link: &quot;trombone toys&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
+
+Lexi &quot;LexiGameDev&quot; Kunkel: (link: &quot;Intern cubicle story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern-version1~&#39;)]
+
+Kornel: (link: &quot;Ticking bomb box story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_box&amp;file=kornel_kornel-index~&#39;)]
+
+H Trayford: (link: &quot;Ozymandias area&quot;)[(goto-url: &#39;unity_loader.html?phrase=Abandon_statue&amp;file=HOne&#39;)]
+
+Ashleigh M.: (link: &quot;Library environment&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_library&amp;file=ashleigh_library~&#39;)]
+
+Catherine San Luis: (link: &quot;Rotation puzzle&quot;)[(goto-url: &#39;cathysl/cathysl_rotation.html&#39;)]
+
+Alan Zaring: (link: &quot;Snowglobe music&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=TurnTableCar&#39;)]
+
+Justin Chin: (link: &quot;Angel Bot&quot;)[(goto-url: &#39;twine_frame.html?phrase=Put_down_the_bot&amp;file=jchingamesexperiments_angelbot~&#39;)]
+
+Special thanks to (link: &quot;Ryan Malm&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)], (link: &quot;Brian J. Boucher&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)], and Graham Brown
+
+This project was made by members of (link: &quot;HomeTeamGameDev.com&quot;)[(goto-url: &#39;https://HomeTeamGameDev.com&#39;)] - Apply to make games with us!
+</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
