First code added (ticking box space, working on next as a batch next; not tested thoroughly yet but will do another pass after codes are in)

--- a/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
+++ b/HP Labs Main Twine and JS Projects/kornel/kornel-index.html
@@ -126,7 +126,7 @@ What now?
 
 The display stopped changing, stuck on: (colour: &quot;#e61919&quot;)[**$seconds**].
 
-Once all the cables are cut you notice a [REVEAL CODE HERE] inside the box.
+Once all the cables are cut you notice a note inside the box: OCEANSIDE Ch 4 Part 49 Word 3
 
 The voice in the headphone starts talking again. But you aren&#39;t paying attention to it any longer.
 
