Some JS updates

--- a/HP Labs Main Twine and JS Projects/LexiGameDev/Cubicle of an intern.html
+++ b/HP Labs Main Twine and JS Projects/LexiGameDev/Cubicle of an intern.html
@@ -124,7 +124,7 @@ Selecting those, who look most exciting, you write down this short list:
 
 [[SOLVING RIDDLE-&gt;Virus Dead]]
 [[Ignore danger and turn away-&gt;Leave cubicle]]</tw-passagedata><tw-passagedata pid="13" name="Put in clue" tags="" position="1300,600" size="100,100">[[Right Password-&gt;Secret]]
-[[Wrong Password-&gt;Virus]]</tw-passagedata><tw-passagedata pid="14" name="Secret" tags="trap" position="2100,600" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="15" name="Password Hint" tags="" position="1400,500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="16" name="Virus Dead" tags="win text-done" position="1500,100" size="100,100">Title: Virus Defeated
+[[Wrong Password-&gt;Virus]]</tw-passagedata><tw-passagedata pid="14" name="Secret" tags="trap" position="2100,600" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="15" name="Password Hint" tags="" position="1400,500" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="16" name="Virus Dead" tags="win text-done" position="1500,100" size="100,100">Title: Virus Defeated
 
 &quot;....&quot;, the code on screen vanishes. It looks like you managed to detect the hidden virus and defeat it. You breathe a sigh of relief. The time you spend in Computer Science classes seems to have paid out - at last.
 
@@ -210,7 +210,7 @@ What color do you want to check out?
 [[Red&lt;-&quot;Red, Scribbled on Docs&quot;]]
 [[Yellow&lt;-&quot;Yellow, Written in foreign language&quot;]]
 [[Green&lt;-&quot;Green, Financial statements&quot;]]
-[[Purple&lt;- &quot;Purple, Top secret stuff&quot;]]</tw-passagedata><tw-passagedata pid="20" name="Red" tags="" position="3200,700" size="100,100">[[Secret]]</tw-passagedata><tw-passagedata pid="21" name="Yellow" tags="" position="3300,700" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="22" name="Green" tags="" position="3400,700" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="23" name="Purple" tags="" position="3500,700" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="24" name="Drawers" tags="text-done" position="2700,500" size="100,100">
+[[Purple&lt;- &quot;Purple, Top secret stuff&quot;]]</tw-passagedata><tw-passagedata pid="20" name="Red" tags="" position="3200,700" size="100,100">[[Secret]]</tw-passagedata><tw-passagedata pid="21" name="Yellow" tags="" position="3300,700" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="22" name="Green" tags="" position="3400,700" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="23" name="Purple" tags="" position="3500,700" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="24" name="Drawers" tags="text-done" position="2700,500" size="100,100">
 Bending down you inspect the drawers underneath the table. 
 Four in total. 
 The first three are not protected while the last one is secured. 
@@ -259,7 +259,7 @@ But instead of the normal black logo on white paper, the company logo is printed
 Red, yellow, green, and purple. 
 
 [[Look closer-&gt;Colored documents]]
- </tw-passagedata><tw-passagedata pid="27" name="GAME !!Post/It!!" tags="" position="1300,400" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="28" name="Entering different space" tags="" position="1200,500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="29" name="Wrong answer, Laptop dead" tags="trap" position="1400,300" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="30" name="First" tags="text-done" position="2500,400" size="100,100">Opening the first drawer you see various office supplies. 
+ </tw-passagedata><tw-passagedata pid="27" name="GAME !!Post/It!!" tags="" position="1300,400" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="28" name="Entering different space" tags="" position="1200,500" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="29" name="Wrong answer, Laptop dead" tags="trap" position="1400,300" size="100,100">4.29:7</tw-passagedata><tw-passagedata pid="30" name="First" tags="text-done" position="2500,400" size="100,100">Opening the first drawer you see various office supplies. 
 Nothing out of the ordinary. But on closer inspection, you find a folded piece of paper hidden underneath a stapler and some pens. 
 
 Do you want to take it out and read?
@@ -285,7 +285,7 @@ Doomsday
 Closing the calendar and putting it back into the drawer you start to feel worried. 
 What is going on here? 
 What does Doomsday mean? 
-How is the intern involved in it?</tw-passagedata><tw-passagedata pid="33" name="Locked" tags="" position="2900,600" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="34" name="Note drawer1" tags="text-done" position="2300,400" size="100,100">Anxiously you open the note. It contains only one sentence in bold red letters. 
+How is the intern involved in it?</tw-passagedata><tw-passagedata pid="33" name="Locked" tags="" position="2900,600" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="34" name="Note drawer1" tags="text-done" position="2300,400" size="100,100">Anxiously you open the note. It contains only one sentence in bold red letters. 
 
 Don’t inspect my drawers or you may be punished! /needs change/
 
@@ -340,7 +340,7 @@ The last picture revealed who made those embarrassing pics:
  
 She made a photo of herself looking straight into the mirror smiling with a victory sign - Lexi, the new intern!
  
-Amused you close the folder and start to explore further.</tw-passagedata><tw-passagedata pid="38" name="Advertisement" tags="" position="1500,400" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="39" name="Money" tags="" position="1700,500" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="40" name="More SF" tags="text-done" position="1900,400" size="100,100">A high pitch scream shrieks from the speakers and you feel is if the blood in your veins got frozen. Shortly after the word virus appears in the middle of the screen. Underneath you see five boxes. It seems like you require a password to stop the rivals. In the high left corner of the screen, a countdown appears. You feel that the pressure of the situation overwhelms you. Do you try to diffuse the situation? It seems like Lexi wanted to play so the password should be somewhere. Where? What if you can’t find it before the countdown is up?
+Amused you close the folder and start to explore further.</tw-passagedata><tw-passagedata pid="38" name="Advertisement" tags="" position="1500,400" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="39" name="Money" tags="" position="1700,500" size="100,100">Momentarily disoriented, you shake your head, then go back.</tw-passagedata><tw-passagedata pid="40" name="More SF" tags="text-done" position="1900,400" size="100,100">A high pitch scream shrieks from the speakers and you feel is if the blood in your veins got frozen. Shortly after the word virus appears in the middle of the screen. Underneath you see five boxes. It seems like you require a password to stop the rivals. In the high left corner of the screen, a countdown appears. You feel that the pressure of the situation overwhelms you. Do you try to diffuse the situation? It seems like Lexi wanted to play so the password should be somewhere. Where? What if you can’t find it before the countdown is up?
  
 You take a deep breath and realize that you have another option than to try to dissolve the situation.
 You could avoid the situation altogether. Why should you care if there is a virus outbreak originated from a college&#39;s laptop?
