--- a/HP Labs Main Twine and JS Projects/ashleigh/library.html
+++ b/HP Labs Main Twine and JS Projects/ashleigh/library.html
@@ -11,9 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="&quot;library&quot;" startnode="1" creator="Twine" creator-version="2.3.7" ifid="2FE16135-6318-465E-9C1A-D2A296D4A63D" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Untitled Passage" tags="" position="583,242" size="100,100">(first pass)
-
-You&#39;ve arrived in what appears to be a sun room, beams of light peer through bookshelves that span from floor to ceiling.
+<tw-storydata name="&quot;library&quot;" startnode="1" creator="Twine" creator-version="2.3.7" ifid="2FE16135-6318-465E-9C1A-D2A296D4A63D" zoom="1" format="Harlowe" format-version="3.1.0" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Untitled Passage" tags="" position="583,242" size="100,100">You&#39;ve arrived in what appears to be a sun room, beams of light peer through bookshelves that span from floor to ceiling.
 The room can&#39;t be larger than a studio apartment, but the shelves live in a surprisingly maze-like arrangement. 
 
 Through the book shelves and can see windows. Tall, thin, and spaced tightly together, they make up most of the outer wall.  
@@ -28,7 +26,7 @@ It&#39;s a bed, but it doesn&#39;t even qualify as a twin.
 If the person who sleeps in this room were to toss or turn, they would probably fall off. 
 
 A two books are strewn carelessly on the bed. [[&quot;The Shallows&quot;]] and [[&quot;The Heart is Deceitful above all things&quot;]]
-</tw-passagedata><tw-passagedata pid="3" name="&quot;The Shallows&quot;" tags="" position="508,541" size="100,100">A few pages are bookmarked .
+</tw-passagedata><tw-passagedata pid="3" name="&quot;The Shallows&quot;" tags="" position="508,541" size="100,100">A few pages are bookmarked.
 
 [[page 182]]
 [[page 185]]
@@ -42,7 +40,7 @@ lower on the page is another passage underlined in red. &quot;The closet is a wo
 
 Under this passage is a delta symbol drawn in sharpie. the lines [[seem to be breathing]]</tw-passagedata><tw-passagedata pid="6" name="make your way to the right wall" tags="" position="396,396" size="100,100">Outside is a quiet tree dotted suburb street. You can see an four way intersection, with streets leaving their meeting point at odd angles, like 4 friends meeting and returning back to their own lives. 
 
-It doesn&#39;t look like the outside of the building you&#39;re in. </tw-passagedata><tw-passagedata pid="7" name="make your way to the back wall" tags="" position="703,392" size="100,100">Looking out forward, you can see a large, three family home, painted a deep navy. It has a large, flat porch with columns supporting the upper level spaced about 10 feet apart, it almost feels southern. In front of the house is a small garden coming out of a huge mound of dirt. A man with paint splattered pants is carrying a ladder to the back. </tw-passagedata><tw-passagedata pid="8" name="seem to be breathing" tags="" position="508,842" size="100,100">(open to world of memory??? totally ok with someone taking over at this point, exquistite corpse style)</tw-passagedata><tw-passagedata pid="9" name="page 182" tags="" position="628,692" size="100,100">Underlined in red:
+It doesn&#39;t look like the outside of the building you&#39;re in. </tw-passagedata><tw-passagedata pid="7" name="make your way to the back wall" tags="" position="703,392" size="100,100">Looking out forward, you can see a large, three family home, painted a deep navy. It has a large, flat porch with columns supporting the upper level spaced about 10 feet apart, it almost feels southern. In front of the house is a small garden coming out of a huge mound of dirt. A man with paint splattered pants is carrying a ladder to the back. </tw-passagedata><tw-passagedata pid="8" name="seem to be breathing" tags="" position="508,842" size="100,100">6.36:4</tw-passagedata><tw-passagedata pid="9" name="page 182" tags="" position="628,692" size="100,100">Underlined in red:
 
 &quot;Memory is like book of pressed flowers&quot;.</tw-passagedata><tw-passagedata pid="10" name="page 189" tags="" position="389,691" size="100,100">Underlined in red:
 
