--- a/HP Labs Main Twine and JS Projects/jchingamesexperiments/angelbot.html
+++ b/HP Labs Main Twine and JS Projects/jchingamesexperiments/angelbot.html
@@ -24,7 +24,7 @@
 [[Negative Response-&gt;Bad]]
 </tw-passagedata><tw-passagedata pid="3" name="decline" tags="" position="1057,150" size="100,100">Aww... I understand, going back into sleep mode...</tw-passagedata><tw-passagedata pid="4" name="Good Response on Day" tags="" position="558,349" size="100,100">&lt;!--Intricacies of the day and Language to focus the child on the positives or negatives. --&gt;
 
-Positive Focus for the day</tw-passagedata><tw-passagedata pid="5" name="Bad" tags="" position="761,347" size="100,100">&lt;!-- intricacies of positive focus even in the negatives and learning from the lessons, but first starting with empathy and then using NLP to alter the language the child uses --&gt;
+7.3:1</tw-passagedata><tw-passagedata pid="5" name="Bad" tags="" position="761,347" size="100,100">&lt;!-- intricacies of positive focus even in the negatives and learning from the lessons, but first starting with empathy and then using NLP to alter the language the child uses --&gt;
 
 Empathize, and understand, reflect back onto the child
 
