--- a/HP Labs Main Twine and JS Projects/main.html
+++ b/HP Labs Main Twine and JS Projects/main.html
@@ -406,13 +406,13 @@ press V to toggle voiceover
 (link: &quot;brianjb JavaScript&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;twine_frame.html?phrase=Drop_the_book&amp;file=rybar_twineTestLost_Lost~&#39;)]
 (link: &quot;jchingames html canvas demo&quot;)[(goto-url: &#39;jchingamesexperiments/first.html&#39;)]
-(link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="1463.3333333333333,381" size="100,100">This game contains games.
+(link: &quot;Justin C. Unity&quot;)[(goto-url: &#39;unity_loader.html?phrase=Leave_game&amp;file=JChinOne&#39;)]</tw-passagedata><tw-passagedata pid="3" name="playerPath1-amnesia" tags="VO" position="1463.3333333333333,381" size="100,100">This is a game that contains many different kinds of games.
 
-You&#39;ll be exploring an abandoned game studio through text such as this. The games you find in it will vary between 2D, 3D, and also text-based.
+You&#39;ll be exploring an abandoned game studio through text such as this, but the games you discoevr are a mix of 2D, 3D, and also text-based.
 
 [[Explore the office-&gt;officeStart]]
 
-&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;This game contains games. You\&#39;ll be exploring an abandoned game studio through text such as this. The games you find in it will vary between 2D, 3D, and also text-based.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="writing experiments" tags="" position="229,1172" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
+&lt;img src=&quot;https://gamkedo-la.github.io/HiddenPassages2RnD/HP%20Labs%20Main%20Twine%20and%20JS%20Projects/empty.png&quot; onload=&quot;SpeakingThing.textToSpeech(&#39;This is a game that contains many different kinds of games. You\&#39;ll be exploring an abandoned game studio through text such as this, but the games you discoevr are a mix of 2D, 3D, and also text-based.&#39;)&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="writing experiments" tags="" position="229,1172" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
 [[Chaotic amount of papers, books, high ceilings.-&gt;hugeLibrary]]
 
@@ -618,7 +618,7 @@ Klaim (A. Joël Lamotte): (link: &quot;Infinite cubes&quot;)[(goto-url: &#39;uni
 
 Christer &quot;McFunkypants&quot; Kaitila: (link: &quot;BBS hacker&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]
 
-Michael &quot;Misha&quot; Fewkes: (link: &quot;Drum machine&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)] and (link: &quot;trombone toys&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
+Michael &quot;Misha&quot; Fewkes: (link: &quot;Drum machine&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)], (link: &quot;trombone machine&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)], (link: &quot;flute machine&quot;)[(goto-url: &#39;mdfewkes/Fl.html&#39;)], and (link: &quot;trumpet machine&quot;)[(goto-url: &#39;mdfewkes/Tp.html&#39;)]
 
 Lexi &quot;LexiGameDev&quot; Kunkel: (link: &quot;Intern cubicle story&quot;)[(goto-url: &#39;twine_frame.html?phrase=Leave_cubicle&amp;file=LexiGameDev_cubicle-of-an-intern-version1~&#39;)]
 
